--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,15 @@
 {% load static %}
-
-
 <!DOCTYPE html>
 <html>
 
 <head>
-    <title></title>
+    <title>Car Zone {% block title %}    {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
 
     <!-- External CSS libraries -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.min.css' %} ">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-submenu.css' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-select.min.css' %}">
@@ -26,11 +24,11 @@
     <link rel="stylesheet" type="text/css"  href="{% static 'css/jnoty.css' %}">
 
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" id="style_sheet" href="{% static 'css/skins/red.css' %}">
 
     <!-- Favicon icon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" >
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" >
 
     <!-- Google fonts -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800%7CPlayfair+Display:400,700%7CRoboto:100,300,400,400i,500,700">
@@ -39,7 +37,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/ie10-viewport-bug-workaround.css' %}">
 
-    <script  src="{& static 'js/ie-emulation-modes-warning.js' &}"></script>
+    <script  src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
 </head>
 <body>
 <div class="page_loader"></div>
@@ -54,6 +52,15 @@
 
 
 {% endblock %}
+
+<!-- Full Page Search -->
+<div id="full-page-search">
+    <button type="button" class="close">×</button>
+    <form action="search" class="search-header">
+        <input type="search" value="" placeholder="type keyword(s) here. Eg: audi, benz etc" name='keyword' />
+        <button type="submit" class="btn btn-sm button-theme">Search</button>
+    </form>
+</div>
 
 {% include 'includes/footer.html' %}
 
