--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -133,11 +133,11 @@
                 <div class="slick-slide-item">
                     <div class="car-box-3">
                         <div class="car-thumbnail">
-                            <a href="car-details.html" class="car-img">
+                            <a href="{% url 'car_detail' car.id %}" class="car-img">
                                 <div class="tag-2">Featured</div>
                                 <div class="price-box">
 
-                                    <span>${{ car.price | intcomma }}</span>
+                                    <span>CAD {{ car.price | intcomma }}</span>
                                 </div>
                                 <img class="d-block w-100" src="{{ car.car_photo.url }}" alt="car" style="min-height:262px; max:262px;">
                             </a>
@@ -177,11 +177,11 @@
                         </div>
                         <div class="detail">
                             <h1 class="title">
-                                <a href="car-details.html">{{ car.car_title }}</a>
+                                <a href="{% url 'car_detail' car.id %}">{{ car.car_title }}</a>
                             </h1>
                             <div class="location">
-                                <a href="car-details.html">
-                                    <i class="flaticon-pin"></i>{{  car.state}} {{ car.city }}
+                                <a href="{% url 'car_detail' car.id %}">
+                                    <i class="flaticon-pin"></i>{{ car.province }}, {{ car.city }}
                                 </a>
                             </div>
                             <ul class="facilities-list clearfix">
@@ -224,7 +224,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="car-box">
                     <div class="car-thumbnail">
-                        <a href="car-details.html" class="car-img">
+                        <a href="{% url 'car_detail' car.id %}" class="car-img">
                             <div class="tag">For Sale</div>
                             <img class="d-block w-100" src="{{ car.car_photo.url }}" alt="car" style="min-height: 262px; max-height: 262px;">
                             <div class="facilities-list clearfix">
@@ -276,11 +276,11 @@
                     </div>
                     <div class="detail">
                         <h1 class="title">
-                            <a href="car-details.html">{{ car.car_title }}</a>
+                            <a href="{% url 'car_detail' car.id %}">{{ car.car_title }}</a>
                         </h1>
                         <div class="location">
-                            <a href="car-details.html">
-                                <i class="flaticon-pin"></i>{{ car.state }} {{ car.city }}
+                            <a href="{% url 'car_detail' car.id %}">
+                                <i class="flaticon-pin"></i>{{ car.province }}, {{ car.city }}
                             </a>
                         </div>
                     </div>
@@ -289,7 +289,7 @@
                             <p class="cartype">{{ car.body_style }}</p>
                         </div>
                         <div class="pull-right">
-                            <p class="price">CAD{{ car.price | intcomma }}</p>
+                            <p class="price">CAD {{ car.price | intcomma }}</p>
                         </div>
                     </div>
                 </div>
